objects/Payment_Details__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Id__c</fullName>
        <label>Charge Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payment Details</relationshipLabel>
        <relationshipName>Payment_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Receipt_URL__c</fullName>
        <label>Receipt URL</label>
        <type>Url</type>
    </fields>
    <label>Payment Detail</label>
    <nameField>
        <label>Payment Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>